--- a/index.htm
+++ b/index.htm
@@ -67,14 +67,14 @@ padding-top: 80px;
 }
 
 .rightBox table {
-border-top: 1px solid #0186d2;
-border-left: 1px solid #0186d2;   <!*********************>
+border-top: 1px solid #e2b0b5;
+border-left: 1px solid #e2b0b5;   <!*********************>
 }
 
 .rightBox td,
 .rightBox th {
-border-right: 1px solid #0186d2;
-border-bottom: 1px solid #0186d2;
+border-right: 1px solid #e2b0b5;
+border-bottom: 1px solid #e2b0b5;
 }
 
 .rightBox th {
@@ -379,7 +379,7 @@ His research interests include machine learning and reasoning, question answerin
 <tbody>
 
 <!*******************---------Textbook Question Answering---------*************>
-<tr bgcolor="#CCE5FF">
+<tr bgcolor="#fff9f9">
 <th colspan="2" align="left">
 <font color="black"><b>Multi-Modal Machine Comprehension (M3C)</b>
 
@@ -413,7 +413,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 
 
 <!*******************---------Stable prediction---------*************>
-<tr bgcolor="#CCE5FF">
+<tr bgcolor="#fff9f9">
 <th colspan="2" align="left">
 <font color="black"><b>Stable Machine Learning</b>
 &nbsp;
