--- a/index.htm
+++ b/index.htm
@@ -405,7 +405,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 <br>
 
 <b>Paper or codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Code</a>]
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
 </td>
 </tr>
 <!*******************---------Textbook Question Answering end---------*************>
@@ -438,7 +438,7 @@ We made efforts to design advanced models to learn invariant representations for
 <br>
 
 <b>Paper or codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Code</a>]
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
 </td>
 </tr>
 <!**---------Stable prediction end--------------*>
