--- a/index.htm
+++ b/index.htm
@@ -404,7 +404,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 <br>
 <br>
 
-<b>Paper or codes: </b>
+<b>Paper/codes: </b>
 [<a href="https://zqyuan.github.io/homepage/">Download</a>]
 </td>
 </tr>
@@ -437,7 +437,7 @@ We made efforts to design advanced models to learn invariant representations for
 <br>
 <br>
 
-<b>Paper or codes: </b>
+<b>Paper/codes: </b>
 [<a href="https://zqyuan.github.io/homepage/">Download</a>]
 </td>
 </tr>
