--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include machine learning and reasoning, question answering, and multimodal artificial intelligence.
+His research interests include multimodal artificial intelligence, machine learning and reasoning, question answering, and structural parsing.
 
 <br>
 <br>
