--- a/index.htm
+++ b/index.htm
@@ -240,7 +240,7 @@ box-sizing: border-box;
 <div class="main">
 <div class="left">
 <h1>
-<p><img alt="" src="https://zqyuan.github.io/homepage/profile_photo1005.jpeg" style="WIDTH: 135px; HEIGHT: 180px" /></p>
+<p><img alt="" src="https://zqyuan.github.io/homepage/head1003.jpeg" style="WIDTH: 127px; HEIGHT: 180px" /></p>
 <p><b>
 Zhaoquan Yuan
 </b>
