--- a/index.htm
+++ b/index.htm
@@ -323,6 +323,11 @@ His research interests include multimodal artificial intelligence, machine learn
 
 <ul>
 
+
+<li> 
+<font size="2" color="red"> [<I>Oct 15, 2020</I>] </italic> </font>  Paper “H. Shao, Z. Yuan, X. Peng, and C. Xu. "Contrastive Learning in Frequency Domain for Non-I.I.D. Image Classification" is accepted by MMM2021.
+</li>
+
 <li> 
 <font size="2" color="red"> [<I>June 01, 2020</I>] </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
@@ -521,21 +526,21 @@ We are engaged in developing advanced algorithms for multi-modal human-computer 
 
 <li>
   <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
-  in IEEE Transactions on Multimedia (<strong>TMM, JCR Q1</strong>), doi: 10.1109/TMM.2020.3002667.
+  in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong> and Yu-Gang Jiang. 
-DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (JCR Q2), 2020.
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (中科院JCR二区), 2020.
 </li>
   
 <li>
   <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
-  in IEEE Transactions on Multimedia (<strong>TMM, JCR Q1</strong>), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+  in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
 <strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> and Yan Liu, "A Unified Framework of Latent Feature Learning in Social Media," 
-  in IEEE Transactions on Multimedia (<strong>TMM, JCR Q1</strong>), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
+  in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
 
 </ul>
@@ -558,12 +563,12 @@ submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng and Xiao Wu,
 "Contrastive learning in frequency domain for Non-I.I.D. image classification,"
-submitted to the International MultiMedia Modeling Conference (MMM 2021).
+In the 27th International Conference on Multimedia Modeling, 2020 (Accepted).
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup>,
 "Latent feature learning in social media network,"
-In Proceedings of the 21st ACM international conference on Multimedia (<strong>ACM MM, CCF-A</strong>), pp. 253-262. ACM, 2013.
+In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang and Changsheng Xu<sup>*</sup>, 
@@ -730,10 +735,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <font size="4"><b>招生信息</b></font>  &nbsp; <a href="#top">Go Top</a>
 </p>
 
-袁召全博士本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。
-  近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，
-  任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。研究方向主要包括智能问答、机器学习与推理、多模态人工智能等。
-  目前主持国家自然科学基金青年项目1项，四川省科技计划项目1项，中央高校基本科研业务费项目1项。欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。
+袁召全，模式识别与智能系统专业博士，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。  
+
+主要研究方向包括智能问答系统、多模态人工智能、机器学习与推理、多媒体语义理解等。目前主持国家自然科学基金、四川省科技计划等项目多项。欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。
 
 <br>
 <br>
@@ -750,7 +754,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 <!*****************************updated date***********************************>
 <div class="rightBox">
 
-Last updated date: June 01, 2020.
+Last updated date: Oct 15, 2020.
 <br>
 <br>
 
