--- a/index.htm
+++ b/index.htm
@@ -525,21 +525,25 @@ We are engaged in developing advanced algorithms for multi-modal human-computer 
 <ul>
 
 <li>
-  <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu, "Adversarial Multimodal Network for Movie Story Question Answering," 
-  in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
+  <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu and Changsheng Xu<br> 
+<strong>Adversarial Multimodal Network for Movie Story Question Answering </strong> <br> 
+IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
-<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong> and Yu-Gang Jiang. 
-DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in Neurocomputing (中科院JCR二区), 2020.
-</li>
-  
-<li>
-  <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain, "Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach," 
-  in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong> and Yu-Gang Jiang <br> 
+<strong>DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition </strong> <br> 
+Neurocomputing (中科院JCR二区), 2020.
 </li>
   
 <li>
-<strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> and Yan Liu, "A Unified Framework of Latent Feature Learning in Social Media," 
+  <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan and M. Shamim Hossain<br> 
+  <strong>Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach</strong> <br> 
+  IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+</li>
+  
+<li>
+<strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> and Yan Liu<br> 
+  <strong>A Unified Framework of Latent Feature Learning in Social Media </strong> <br> 
   in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
 
@@ -555,24 +559,24 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition. in 
 <ul>
 
  <!--
-<li>Xiao Peng, <strong>Zhaoquan Yuan<sup>*</sup></strong>,  Huan Shao, Xiao Wu and Changsheng Xu,
-"Meta-Learning Causal Convolutional Network for Stable Prediction,"
+<li>Xiao Peng, <strong>Zhaoquan Yuan<sup>*</sup></strong>,  Huan Shao, Xiao Wu and Changsheng Xu<br> 
+ <strong>Meta-Learning Causal Convolutional Network for Stable Prediction </strong><br> 
 submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
 </li>
  -->
 
-<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng and Xiao Wu,
-"Contrastive learning in frequency domain for Non-I.I.D. image classification,"
+<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng and Xiao Wu,<br> 
+ <strong>Contrastive learning in frequency domain for Non-I.I.D. image classification </strong><br> 
 In the 27th International Conference on Multimedia Modeling, 2020 (Accepted).
 </li>
   
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup>,
-"Latent feature learning in social media network,"
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu and Changsheng Xu<sup>*</sup><br> 
+ <strong>Latent feature learning in social media network </strong><br> 
 In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
 
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang and Changsheng Xu<sup>*</sup>, 
-"Tag-aware image classification via nested deep belief nets,"
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang and Changsheng Xu<sup>*</sup> <br> 
+ <strong>Tag-aware image classification via nested deep belief nets </strong><br> 
 In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.
 </li>
 
