--- a/index.htm
+++ b/index.htm
@@ -658,7 +658,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <p>
 <font size="3">
-<b>Students Collaborated With Me</b></font>
+<b>Collaborating Students</b></font>
 </p>
 
 <ul>
