--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include multimodal conversational artificial intelligence, machine learning and reasoning, question answering and dialog, and pattern recognition.
+His research interests include multi-modal conversational artificial intelligence, machine learning and reasoning, question answering and dialog, and pattern recognition.
 
 <br>
 <br>
