--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
 }
 
 .rightBox {
-padding: 5px 90px 20px;
+padding: 5px 100px 20px;
 border-top: 1px solid #eee;
 position: relative;
 }
@@ -323,7 +323,6 @@ His research interests include multi-modal conversational artificial intelligenc
 
 <ul>
 
-
 <li> 
 <font size="2" color="red"> [<I>Oct 15, 2020</I>] </italic> </font>  Paper “H. Shao, Z. Yuan, X. Peng, and C. Xu. "Contrastive Learning in Frequency Domain for Non-I.I.D. Image Classification" is accepted by MMM2021.
 </li>
@@ -407,7 +406,6 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 
 
 <br>
-<br>
 
 <b>Paper/codes: </b>
 [<a href="https://zqyuan.github.io/homepage/">Download</a>]
@@ -438,8 +436,6 @@ Conventional predictive models in machine learning are based on the I.I.D. hypot
 We made efforts to design advanced models to learn invariant representations for stable prediction by combining contrastive learning, causal inference, meta-learning, etc.
 
 
-
-<br>
 <br>
 
 <b>Paper/codes: </b>
@@ -548,7 +544,6 @@ Neurocomputing (中科院JCR二区), 2020.
 </li>
 
 </ul>
-
 
 
 <p>
@@ -710,9 +705,6 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </ul>
 
   
-  
-
-<!*****---------------- Others---------------- ***>
 
 <p>
 <font size="3">
@@ -727,7 +719,9 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 </li>
 
 </ul>
+
 <br>
+
 </div>
 
 
@@ -761,7 +755,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 Last updated date: Oct 15, 2020.
 <br>
 <br>
-
+</div>
 <!*********************************Visit tracker**********************************>
 
 
