--- a/index.htm
+++ b/index.htm
@@ -739,7 +739,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 
 <br>
-<u>欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。有意向的同学请邮件咨询: zqyuan0@gmail.com</u>。
+<u><I>欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。有意向的同学请邮件咨询: zqyuan0@gmail.com</I></u>。
 <br>
 <br>
 
