--- a/index.htm
+++ b/index.htm
@@ -606,7 +606,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <div class="rightBox">
 <p id="FUNDS">
-<font size="4"><b>SERVICES</b> </font> &nbsp; <a href="#top">Go Top</a>
+<font size="4"><b>PROFESSIONAL ACTIVITIES</b> </font> &nbsp; <a href="#top">Go Top</a>
 </p>
 
 <p>
