--- a/index.htm
+++ b/index.htm
@@ -414,6 +414,45 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 <!*******************---------Textbook Question Answering end---------*************>
 
 
+
+<!*****-------------------------Multi-Modal Conversation------------------------****>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Multi-Modal Conversation</b>
+&nbsp;
+
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="250" align="center"><img src="https://zqyuan.github.io/homepage/vis-dial.png" width="120">
+</td>
+<td>
+
+Human-computer dialogue is one of the important research directions of natural language understanding and generation. 
+  However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
+  In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
+  the multi-modal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
+  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution 
+  more efficient and the interaction mode more natural. 
+We are engaged in developing advanced algorithms for multi-modal human-computer interaction system to understand the user's 
+  intentions in a detailed way and give accurate and fast responses.
+
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+
+</td>
+</tr>
+
+<!*****-------------------------Multimodal Conversation end------------------------****>
+
+
+
+
 <!*******************---------Stable prediction---------*************>
 <tr bgcolor="#fff9f9">
 <th colspan="2" align="left">
@@ -446,47 +485,7 @@ We made efforts to design advanced models to learn invariant representations for
 
 
 
-<!--
-<!*****-------------------------Multi-Modal Dialogue------------------------****>
-<tr bgcolor="#CCE5FF">
-<th colspan="2" align="left">
-<font color="black"><b>Multi-Modal Conversation</b>
-&nbsp;
 
-
-[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
-
-
-</font>
-</th>
-</tr>
-<tr>
-<td width="250" align="center"><img src="https://zqyuan.github.io/homepage/vis-dial.png" width="120">
-</td>
-<td>
-
-Human-computer dialogue is one of the important research directions of natural language understanding and generation. 
-  However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
-  In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
-  the multi-modal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
-  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution 
-  more efficient and the interaction mode more natural. 
-We are engaged in developing advanced algorithms for multi-modal human-computer interaction system to understand the user's 
-  intentions in a detailed way and give accurate and fast responses.
-
-
-<br>
-<br>
-
-<b>Datasets and codes: </b>
-[<a href="https://amritasaha1812.github.io/MMD/">Dataset</a>]&nbsp;
-[<a href="https://zqyuan.github.io/homepage/">Code</a>]
-
-</td>
-</tr>
-
-<!*****-------------------------Multimodal Dialogue end------------------------****>
--->
 
 
 
