--- a/index.htm
+++ b/index.htm
@@ -452,6 +452,43 @@ We are engaged in developing advanced algorithms for multi-modal human-computer 
 
 
 
+<!--
+
+<!*****-------------------------Graph-based AI------------------------****>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Neural-Symbolic Learning</b>
+&nbsp;
+
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="250" align="center"><img src="https://zqyuan.github.io/homepage/vis-dial.png" width="120">
+</td>
+<td>
+In real world, many complicated tasks, such as autonomous driving, public policy decision making, and multi-hop question answering, require understanding the relationship between high-level variables in the data to perform logical reasoning, which is known as System II intelligence. Integrating system I and II intelligence lies in the core of artificial intelligence and machine learning.
+
+Graph is an important structure for System II intelligence, with the universal representation ability to capture the relationship between different variables, and support interpretability, causality, and transferability / inductive generalization. Traditional logic and symbolic reasoning over graphs has relied on methods and tools which are very different from deep learning models, such Prolog language, SMT solvers, constrained optimization and discrete algorithms. Is such a methodology separation between System I and System II intelligence necessary? How to build a flexible, effective and efficient bridge to smoothly connect these two systems, and create higher order artificial intelligence?
+
+Graph neural networks, have emerged as the tool of choice for graph representation learning, which has led to impressive progress in many classification and regression problems such as chemical synthesis, 3D-vision, recommender systems and social network analysis. However, prediction and classification tasks can be very different from logic/symbolic reasoning.
+
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+
+</td>
+</tr>
+
+<!*****-------------------------Graph-based AI end------------------------****>
+-->
+
+
+
+
 
 <!*******************---------Stable prediction---------*************>
 <tr bgcolor="#fff9f9">
