--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<title>Zhaoquan Yuan（袁召全）'s Homepage </title>
+<title>Zhaoquan Yuan (袁召全)'s Homepage </title>
 <style>
 body {
 font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -724,7 +724,7 @@ In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 
 
 <p>
 <font size="3">
-<b>Machine learning / NLP</b></font>
+<b>Machine Learning / NLP</b></font>
 </p>
 
 <ul>
