--- a/index.htm
+++ b/index.htm
@@ -557,25 +557,25 @@ We made efforts to design advanced models to learn invariant representations for
 <ul>
 
 <li>
-  <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu, Changsheng Xu<br> 
-<strong>Adversarial Multimodal Network for Movie Story Question Answering </strong> <br> 
+  <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu, and Changsheng Xu<br> 
+Adversarial Multimodal Network for Movie Story Question Answering <br> 
 IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, Yu-Gang Jiang <br> 
-<strong>DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition </strong> <br> 
+DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br> 
 Neurocomputing (中科院JCR二区), 2020.
 </li>
   
 <li>
   <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan, M. Shamim Hossain<br> 
-  <strong>Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach</strong> <br> 
+  Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach<br> 
   IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
 <strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, Yan Liu<br> 
-  <strong>A Unified Framework of Latent Feature Learning in Social Media </strong> <br> 
+  A Unified Framework of Latent Feature Learning in Social Media<br> 
   in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
 
@@ -602,12 +602,12 @@ In the 27th International Conference on Multimedia Modeling, 2020 (Accepted).
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, Changsheng Xu<sup>*</sup><br> 
- <strong>Latent feature learning in social media network </strong><br> 
+Latent feature learning in social media network<br> 
 In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> <br> 
- <strong>Tag-aware image classification via nested deep belief nets </strong><br> 
+Tag-aware image classification via nested deep belief nets<br> 
 In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.
 </li>
 
