--- a/index.htm
+++ b/index.htm
@@ -562,19 +562,19 @@ Adversarial Multimodal Network for Movie Story Question Answering <br>
 IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
-<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, Yu-Gang Jiang <br> 
+<li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, and Yu-Gang Jiang <br> 
 DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br> 
 Neurocomputing (中科院JCR二区), 2020.
 </li>
   
 <li>
-  <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan, M. Shamim Hossain<br> 
+  <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan, and M. Shamim Hossain<br> 
   Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach<br> 
   IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
 </li>
   
 <li>
-<strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, Yan Liu<br> 
+<strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu<br> 
   A Unified Framework of Latent Feature Learning in Social Media<br> 
   in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
 </li>
