--- a/index.htm
+++ b/index.htm
@@ -596,17 +596,17 @@ submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
 </li>
  -->
 
-<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, Xiao Wu,<br> 
- <strong>Contrastive learning in frequency domain for Non-I.I.D. image classification </strong><br> 
+<li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
+Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
 In the 27th International Conference on Multimedia Modeling, 2020 (Accepted).
 </li>
   
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, Changsheng Xu<sup>*</sup><br> 
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
 Latent feature learning in social media network<br> 
 In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
 </li>
 
-<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup> <br> 
+<li><strong>Zhaoquan Yuan</strong>, Jitao Sang, and Changsheng Xu<sup>*</sup> <br> 
 Tag-aware image classification via nested deep belief nets<br> 
 In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.
 </li>
