--- a/index.htm
+++ b/index.htm
@@ -559,24 +559,24 @@ We made efforts to design advanced models to learn invariant representations for
 <li>
   <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu, and Changsheng Xu<br> 
 Adversarial Multimodal Network for Movie Story Question Answering <br> 
-IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
+<I>IEEE Transactions on Multimedia (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.</I>
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, and Yu-Gang Jiang <br> 
 DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br> 
-Neurocomputing (中科院JCR二区), 2020.
+ <I>Neurocomputing (中科院JCR二区), 2020.</I>
 </li>
   
 <li>
   <strong>Zhaoquan Yuan</strong>, Changsheng Xu<sup>*</sup>, Jitao Sang, Shuicheng Yan, and M. Shamim Hossain<br> 
   Learning Feature Hierarchies: A Layer-Wise Tag-Embedded Approach<br> 
-  IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.
+  <I>IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 17, no. 6, pp. 816-827, June 2015, doi: 10.1109/TMM.2015.2417777.</I>
 </li>
   
 <li>
 <strong>Zhaoquan Yuan</strong>, Jitao Sang, Changsheng Xu<sup>*</sup>, and Yan Liu<br> 
   A Unified Framework of Latent Feature Learning in Social Media<br> 
-  in IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.
+ <I>IEEE Transactions on Multimedia (TMM, 中科院JCR一区), vol. 16, no. 6, pp. 1624-1635, Oct. 2014, doi: 10.1109/TMM.2014.2322338.</I>
 </li>
 
 </ul>
@@ -598,17 +598,17 @@ submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
-In the 27th International Conference on Multimedia Modeling, 2020 (Accepted).
+<I>The 27th International Conference on Multimedia Modeling, 2020</I> (Accepted).
 </li>
   
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, Yan Liu, and Changsheng Xu<sup>*</sup><br> 
 Latent feature learning in social media network<br> 
-In Proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.
+<I>The proceedings of the 21st ACM international conference on Multimedia (ACM MM, CCF-A), pp. 253-262. ACM, 2013.</I>
 </li>
 
 <li><strong>Zhaoquan Yuan</strong>, Jitao Sang, and Changsheng Xu<sup>*</sup> <br> 
 Tag-aware image classification via nested deep belief nets<br> 
-In 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.
+<I> The 2013 IEEE International Conference on Multimedia and Expo (ICME, CCF-B), pp. 1-6. IEEE, 2013.</I>
 </li>
 
 </ul>
