--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include multi-modal conversational artificial intelligence, machine learning and reasoning, question answering and dialog, and pattern recognition.
+His research interests include multi-modal artificial intelligence, machine learning and reasoning, and causality.
 
 <br>
 <br>
@@ -769,7 +769,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 袁召全，模式识别与智能系统专业博士，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。  
 
-主要研究方向包括多模态人工智能、智能问答与对话、机器学习与推理、模式识别等。目前主持国家自然科学基金、四川省科技计划等项目多项。
+主要研究方向包括多模态人工智能、机器学习与推理、因果推断、智能问答与对话。目前主持国家自然科学基金、四川省科技计划等项目多项。
 
 
 <br>
