--- a/index.htm
+++ b/index.htm
@@ -381,115 +381,8 @@ His research interests include multi-modal artificial intelligence, machine lear
 <!*******************---------------table-------------*************>
 <table cellpadding="0" cellspacing="0" width="90%">
 <tbody>
-
-<!*******************---------Textbook Question Answering---------*************>
-<tr bgcolor="#fff9f9">
-<th colspan="2" align="left">
-<font color="black"><b>Multi-Modal Machine Comprehension (M3C)</b>
-
-&nbsp;
-
-<!--
-[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
--->
-
-</font>
-</th>
-</tr>
-<tr>
-<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/tqa.png" width="150">
-</td>
-<td>
-
-Multi-Modal Machine Comprehension (M3C) task builds on the popular Visual Question Answering (VQA) and Machine Comprehension (MC) paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
-We are engaged in developing advanced algorithms for multimodal learning and reasoning, especially for textbook question answering, diagram parsing, multi-step reasoning, neural-symbolic learning, etc.
-
-
-<br>
-
-<b>Paper/codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Download</a>]
-</td>
-</tr>
-<!*******************---------Textbook Question Answering end---------*************>
-
-
-<!--
-<!*****-------------------------Multi-Modal Conversation------------------------****>
-<tr bgcolor="#fff9f9">
-<th colspan="2" align="left">
-<font color="black"><b>Multi-Modal Conversation</b>
-&nbsp;
-
-
-</font>
-</th>
-</tr>
-<tr>
-<td width="250" align="center"><img src="https://zqyuan.github.io/homepage/vis-dial.png" width="120">
-</td>
-<td>
-
-Human-computer dialogue is one of the important research directions of natural language understanding and generation. 
-  However, the current human-machine dialogue system is limited to the interactive form of speech or natural language. 
-  In recent years, with the popularization and application of voice assistants, virtual digital people, and intelligent service robots, 
-  the multi-modal conversation with both "visual and listening" plays a more and more important role in the fields of retail, 
-  customer service, media, education, tourism, etc. The multi-modal (text + image) interaction makes the information distribution 
-  more efficient and the interaction mode more natural. 
-We are engaged in developing advanced algorithms for multi-modal human-computer interaction system to understand the user's 
-  intentions in a detailed way and give accurate and fast responses.
-
-
-<br>
-
-<b>Paper/codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Download</a>]
-
-</td>
-</tr>
-
-<!*****-------------------------Multimodal Conversation end------------------------****>
--->
-
-
-<!--
-
-<!*****-------------------------Graph-based AI------------------------****>
-<tr bgcolor="#fff9f9">
-<th colspan="2" align="left">
-<font color="black"><b>Neural-Symbolic Learning</b>
-&nbsp;
-
-
-</font>
-</th>
-</tr>
-<tr>
-<td width="250" align="center"><img src="https://zqyuan.github.io/homepage/vis-dial.png" width="120">
-</td>
-<td>
-In real world, many complicated tasks, such as autonomous driving, public policy decision making, and multi-hop question answering, require understanding the relationship between high-level variables in the data to perform logical reasoning, which is known as System II intelligence. Integrating system I and II intelligence lies in the core of artificial intelligence and machine learning.
-
-Graph is an important structure for System II intelligence, with the universal representation ability to capture the relationship between different variables, and support interpretability, causality, and transferability / inductive generalization. Traditional logic and symbolic reasoning over graphs has relied on methods and tools which are very different from deep learning models, such Prolog language, SMT solvers, constrained optimization and discrete algorithms. Is such a methodology separation between System I and System II intelligence necessary? How to build a flexible, effective and efficient bridge to smoothly connect these two systems, and create higher order artificial intelligence?
-
-Graph neural networks, have emerged as the tool of choice for graph representation learning, which has led to impressive progress in many classification and regression problems such as chemical synthesis, 3D-vision, recommender systems and social network analysis. However, prediction and classification tasks can be very different from logic/symbolic reasoning.
-
-
-<br>
-
-<b>Paper/codes: </b>
-[<a href="https://zqyuan.github.io/homepage/">Download</a>]
-
-</td>
-</tr>
-
-<!*****-------------------------Graph-based AI end------------------------****>
--->
-
-
-
-
-
+  
+  
 <!*******************---------Stable prediction---------*************>
 <tr bgcolor="#fff9f9">
 <th colspan="2" align="left">
@@ -517,6 +410,45 @@ We made efforts to design advanced models to learn invariant representations for
 </td>
 </tr>
 <!**---------Stable prediction end--------------*>
+
+
+  
+  
+<!*******************---------Multi-Modal Machine Comprehension---------*************>
+<tr bgcolor="#fff9f9">
+<th colspan="2" align="left">
+<font color="black"><b>Multi-Modal Machine Comprehension</b>
+
+&nbsp;
+
+<!--
+[<a href="https://zqyuan.github.io/homepage/">Tutorial</a>]
+-->
+
+</font>
+</th>
+</tr>
+<tr>
+<td width="200" align="center"><img src="https://zqyuan.github.io/homepage/tqa.png" width="150">
+</td>
+<td>
+
+Multi-Modal Machine Comprehension task builds on the popular Visual Question Answering (VQA) and Machine Comprehension (MC) paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
+We are engaged in developing advanced algorithms for multimodal learning and reasoning, especially for textbook question answering, diagram parsing, multi-step reasoning, neural-symbolic learning, etc.
+
+
+<br>
+
+<b>Paper/codes: </b>
+[<a href="https://zqyuan.github.io/homepage/">Download</a>]
+</td>
+</tr>
+<!*******************---------Multi-Modal Machine Comprehension end---------*************>
+
+
+
+
+
 
 
 
