--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@ Also, He was engaged in postdoctoral research in UESTC working with <a href="htt
 <br>
 <br>
 
-His research interests include multi-modal artificial intelligence, machine learning, and causal inference.
+His research interests include machine learning, causal inference, and multi-modal artificial intelligence. 
 
 <br>
 <br>
@@ -400,8 +400,8 @@ His research interests include multi-modal artificial intelligence, machine lear
 <td>
 
 Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
-We made efforts to design advanced models to learn invariant representations for stable prediction by combining contrastive learning, causal inference, meta-learning, etc.
-
+We made efforts to design advanced models to solve the unstable machine learning problems, and try to leverages ideas from meta-learning and causality to improve generalization, robustness, interpretability, and sample efficiency and so on. 
+  Especially, we focus on the Out-of-distribution (OOD) generalization problem based on the causality.
 
 <br>
 
