--- a/index.htm
+++ b/index.htm
@@ -400,8 +400,7 @@ His research interests include machine learning, causal inference, and multi-mod
 <td>
 
 Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
-We made efforts to design advanced models to solve the unstable machine learning problems, and try to leverages ideas from meta-learning and causality to improve generalization, robustness, interpretability, and sample efficiency and so on. 
-  Especially, we focus on the Out-of-distribution (OOD) generalization problem based on the causality.
+We try to leverages ideas from meta-learning, transfer learning, and causality to improve the Out-of-distribution (OOD) generalization.
 
 <br>
 
