--- a/index.htm
+++ b/index.htm
@@ -323,9 +323,7 @@ His research interests include machine learning, causal inference, and multi-mod
 
 <ul>
 
-<li> 
-<font size="2" color="red"> [<I>Oct 15, 2020</I>] </italic> </font>  Paper “H. Shao, Z. Yuan, X. Peng, and C. Xu. "Contrastive Learning in Frequency Domain for Non-I.I.D. Image Classification" is accepted by MMM2021.
-</li>
+
 
 <li> 
 <font size="2" color="red"> [<I>June 01, 2020</I>] </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
@@ -518,12 +516,12 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
 
 <ul>
 
- <!--
-<li>Xiao Peng, <strong>Zhaoquan Yuan<sup>*</sup></strong>,  Huan Shao, Xiao Wu, Changsheng Xu<br> 
- <strong>Meta-Learning Causal Convolutional Network for Stable Prediction </strong><br> 
-submitted to the 35th AAAI Conference on Artificial Intelligence (AAAI-21).
+  
+<li><strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, Xiao Wu, Bingkun Bao, and Changsheng Xu<br> 
+ <strong>Meta-Learning Causal Feature Selection for Stable Prediction</strong><br> 
+<I>The IEEE International Conference on Multimedia & Expo</I>, (submitted).
 </li>
- -->
+
 
 <li>Huan Shao, <strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, and Xiao Wu,<br> 
 Contrastive learning in frequency domain for Non-I.I.D. image classification<br> 
