--- a/index.htm
+++ b/index.htm
@@ -517,7 +517,7 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
 <ul>
 
   
-<li><strong>Zhaoquan Yuan<sup>*</sup></strong>, Xiao Peng, Xiao Wu, Bingkun Bao, and Changsheng Xu<br> 
+<li><strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, Bingkun Bao, and Changsheng Xu<br> 
  <strong>Meta-Learning Causal Feature Selection for Stable Prediction</strong><br> 
 <I>The IEEE International Conference on Multimedia & Expo</I>, (submitted).
 </li>
