--- a/index.htm
+++ b/index.htm
@@ -518,7 +518,7 @@ DB-LSTM: Densely-Connected Bi-directional LSTM for Human Action Recognition<br>
 
   
 <li><strong>Zhaoquan Yuan</strong>, Xiao Peng, Xiao Wu<sup>*</sup>, Bingkun Bao, and Changsheng Xu<br> 
- <strong>Meta-Learning Causal Feature Selection for Stable Prediction</strong><br> 
+Meta-Learning Causal Feature Selection for Stable Prediction<br>
 <I>The IEEE International Conference on Multimedia & Expo</I>, (submitted).
 </li>
 
