--- a/index.htm
+++ b/index.htm
@@ -430,7 +430,7 @@ We try to leverages ideas from meta-learning, transfer learning, and causality t
 </td>
 <td>
 
-Multi-Modal Machine Comprehension task builds on the popular Visual Question Answering (VQA) and Machine Comprehension (MC) paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
+Multi-Modal Machine Comprehension task builds on the popular Visual Question Answering and Machine Comprehension paradigms by framing question answering as a machine comprehension task, where the context needed to answer questions is provided and composed of both textual languages and visual images. 
 We are engaged in developing advanced algorithms for multimodal learning and reasoning, especially for textbook question answering, diagram parsing, multi-step reasoning, neural-symbolic learning, etc.
 
 
