--- a/index.htm
+++ b/index.htm
@@ -398,7 +398,7 @@ His research interests include machine learning, causal inference, and multi-mod
 <td>
 
 Conventional predictive models in machine learning are based on the I.I.D. hypothesis between training and testing data. However, such hypothesis is fragile in real world, and the model minimizing empirical errors on training data does not perform well on testing data, which makes the prediction unstable.
-We try to leverages ideas from meta-learning, transfer learning, and causality to improve the Out-of-distribution (OOD) generalization, robustness, and sample efficiency and so on.
+We try to leverage ideas from meta-learning, transfer learning, and causality to improve the Out-of-distribution (OOD) generalization, robustness, and sample efficiency and so on.
 
 <br>
 
