--- a/index.htm
+++ b/index.htm
@@ -651,17 +651,17 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <p>
 <font size="3">
-<b>Machine Learning / NLP</b></font>
+<b>Machine Learning</b></font>
 </p>
 
 <ul>
-<li><a href="https://github.com/changwookjun/nlp-paper"  target="_blank">NLP Paper List</a>, 
-  <a href="https://github.com/sebastianruder/NLP-progress"  target="_blank">NLP-progress</a>,
-  <a href="https://github.com/yizhen20133868/NLP-Conferences-Code"  target="_blank">NLP-Conf-Code</a>.
+  
+<li><a href="https://www.dgl.ai/"  target="_blank">Domain generalization</a>
 </li>
   
-<li><a href="https://www.dgl.ai/"  target="_blank">Deep Graph Libray</a>
+<li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-learning</a>
 </li>
+ 
 
 <li>DRL: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL_Pytorch 1</a>,
   <a href="https://github.com/sweetice/Deep-reinforcement-learning-with-pytorch"  target="_blank">DRL_Pytorch 2</a>
