--- a/index.htm
+++ b/index.htm
@@ -656,7 +656,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <ul>
   
-<li><a href="https://www.dgl.ai/"  target="_blank">Domain generalization</a>
+<li><a href="https://github.com/amber0309/Domain-generalization"  target="_blank">Domain generalization</a>
 </li>
   
 <li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-learning</a>
