--- a/index.htm
+++ b/index.htm
@@ -303,9 +303,10 @@ and received his Ph.D. degree in Pattern Recognition and Intelligent System from
 Also, He was engaged in postdoctoral research in UESTC working with <a href="http://www.lxduan.info/"  target="_blank">Prof. Lixin Duan</a>. 
 
 <br>
+His research interests include stable machine learning, causal learning, and multi-modal semantic comprehension. 
 <br>
-
-His research interests include machine learning, causal inference, and multi-modal artificial intelligence. 
+<br>
+<font size="" color="red"> I am looking for highly-motivated students with solid mathematical background or proficient coding skills. If you are interested in working with me, please send me an email. Thanks! </italic> </font
 
 <br>
 <br>
@@ -698,11 +699,11 @@ Tag-aware image classification via nested deep belief nets<br>
 
 袁召全，模式识别与智能系统专业博士，硕士生导师，中国计算机学会会员，中国人工智能学会会员。本科毕业于中国科学技术大学计算机科学与技术学院，博士毕业于中国科学院自动化研究所 (模式识别国家重点实验室)，师从徐常胜研究员 (IEEE Fellow, 国家杰青, IAPR Fellow)。曾先后在中国-新加坡数字媒体研究院、香港理工大学计算机科学系交流访问。近年来在ACM Multimedia, IEEE Transactions on Multimedia等国际学术会议及期刊发表论文多篇，拥有国家专利2项。任多届MM, ICMR, ICME, MMM, MM Asian等国际会议程序委员会委员，任IEEE Transactions on Multimedia, Multimedia Tools and Applications等国际期刊审稿人。  
 
-主要研究方向包括稳定机器学习、因果推断、多模态人工智能。目前主持国家自然科学基金、四川省科技计划等项目多项。
+主要研究方向包括稳定机器学习、因果学习、多模态人工智能。目前主持国家自然科学基金、四川省科技计划等项目多项。
 
 
 <br>
-<u><I><strong>欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。有意向的同学请邮件咨询: zqyuan0@gmail.com</strong></I></u>。
+<font size="" color="red"> <I><u>欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。有意向的同学请邮件咨询: zqyuan0@gmail.com</I></u></strong> </italic> </font>
 <br>
 <br>
 
