--- a/index.htm
+++ b/index.htm
@@ -327,7 +327,7 @@ His research interests include stable machine learning, causal learning, and mul
 
 
 <li> 
-<font size="2" color="red"> [<I>June 01, 2020</I>] </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
+<font size="" color="red"> [<I>June 01, 2020</I>] </italic> </font>  Paper “Z. Yuan, S. Sun, L. Duan, C. Li, X. Wu, and C. Xu. "Adversarial Multimodal Network for Movie Question Answering" is accepted by IEEE Transactions on Multimedia.
 </li>
 
 
@@ -487,7 +487,7 @@ We are engaged in developing advanced algorithms for multimodal learning and rea
 <li>
   <strong>Zhaoquan Yuan</strong>, Siyuan Sun, Lixin Duan<sup>*</sup>, Changsheng Li<sup>*</sup>, Xiao Wu, and Changsheng Xu<br> 
 Adversarial Multimodal Network for Movie Story Question Answering <br> 
-<I>IEEE Transactions on Multimedia</I>(TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
+<I>IEEE Transactions on Multimedia</I> (TMM, 中科院JCR一区), doi: 10.1109/TMM.2020.3002667.
 </li>
   
 <li>Jun-Yan He, Xiao Wu, Zhi-Qi Cheng, <strong>Zhaoquan Yuan</strong>, and Yu-Gang Jiang <br> 
