--- a/index.htm
+++ b/index.htm
@@ -346,13 +346,13 @@ His research interests include stable machine learning, causal learning, and mul
 
 <ul>
 
-<li>Digital Image Processing, B1250, 2020--2021(1), Text Book: <a href="https://www.amazon.com/Digital-Image-Processing-Rafael-Gonzalez/dp/0133356728/ref=sr_1_1?keywords=digital+image+processing&qid=1548059657&sr=8-1" target="_blank">Digital Image Processing (4th Edition), Rafael C. Gonzalez</a>.
+<li>Digital Image Processing, B1250, 2020--2021(1), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
 </li>
 
-<li>Digital Image Processing, B0445, 2019--2020(2), Text Book: <a href="https://www.amazon.com/Digital-Image-Processing-Rafael-Gonzalez/dp/0133356728/ref=sr_1_1?keywords=digital+image+processing&qid=1548059657&sr=8-1" target="_blank">Digital Image Processing (4th Edition), Rafael C. Gonzalez</a>.
+<li>Digital Image Processing, B0445, 2019--2020(2), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
 </li>
 
-<li>Digital Image Processing, B1932, 2019--2020(1), Text Book: <a href="https://www.amazon.com/Digital-Image-Processing-Rafael-Gonzalez/dp/0133356728/ref=sr_1_1?keywords=digital+image+processing&qid=1548059657&sr=8-1" target="_blank">Digital Image Processing (4th Edition), Rafael C. Gonzalez</a>.
+<li>Digital Image Processing, B1932, 2019--2020(1), Text Book: Digital Image Processing (4th Edition), Rafael C. Gonzalez.
 </li>
 
 <li>Digital Image Processing, B0332, 2018--2019(2).
