--- a/index.htm
+++ b/index.htm
@@ -703,7 +703,7 @@ Tag-aware image classification via nested deep belief nets<br>
 
 
 <br>
-<font size="" color="red"> <I><u>欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。有意向的同学请邮件咨询: zqyuan0@gmail.com</I></u></strong> </italic> </font>
+<font size="" color="red"> <I><u>欢迎有上进心与科研热情、数学与编程基础扎实的同学加入科研团队。有意向的同学请邮件咨询: zqyuan0@gmail.com。</I></u></strong> </italic> </font>
 <br>
 <br>
 
