--- a/index.htm
+++ b/index.htm
@@ -662,6 +662,9 @@ Tag-aware image classification via nested deep belief nets<br>
   
 <li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-learning</a>
 </li>
+  
+<li><a href="https://github.com/xialeiliu/Awesome-Incremental-Learning"  target="_blank">Awesome Incremental Learning / Lifelong learning</a>
+</li>
  
 
 <li>DRL: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL_Pytorch 1</a>,
