--- a/index.htm
+++ b/index.htm
@@ -663,7 +663,7 @@ Tag-aware image classification via nested deep belief nets<br>
 <li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-learning</a>
 </li>
   
-<li><a href="https://github.com/xialeiliu/Awesome-Incremental-Learning"  target="_blank">Awesome Incremental Learning / Lifelong learning</a>
+<li><a href="https://github.com/xialeiliu/Awesome-Incremental-Learning"  target="_blank">Incremental Learning / Lifelong learning</a>
 </li>
  
 
