--- a/index.htm
+++ b/index.htm
@@ -667,7 +667,7 @@ Tag-aware image classification via nested deep belief nets<br>
 </li>
  
 
-<li>DRL: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL_Pytorch 1</a>,
+<li>Deep Reinforcement Learning: <a href="https://github.com/p-christ/Deep-Reinforcement-Learning-Algorithms-with-PyTorch"  target="_blank">DRL_Pytorch 1</a>,
   <a href="https://github.com/sweetice/Deep-reinforcement-learning-with-pytorch"  target="_blank">DRL_Pytorch 2</a>
 </ul>
 
