--- a/index.htm
+++ b/index.htm
@@ -657,13 +657,13 @@ Tag-aware image classification via nested deep belief nets<br>
 
 <ul>
   
-<li><a href="https://github.com/amber0309/Domain-generalization"  target="_blank">Domain generalization</a>
+<li><a href="https://github.com/amber0309/Domain-generalization"  target="_blank">Domain Generalization</a>
 </li>
   
-<li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-learning</a>
+<li><a href="https://github.com/sudharsan13296/Awesome-Meta-Learning"  target="_blank">Meta-Learning</a>
 </li>
   
-<li><a href="https://github.com/xialeiliu/Awesome-Incremental-Learning"  target="_blank">Incremental Learning / Lifelong learning</a>
+<li><a href="https://github.com/xialeiliu/Awesome-Incremental-Learning"  target="_blank">Incremental Learning / Lifelong Learning</a>
 </li>
  
 
